# WasmiMemoryTest

./: Cargo.toml  LICENSE  README.md  main.rs
rust_contract/src/: lib.rs
